[package]
name = "qmaur"
version = "0.0.0"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/QuietMisdreavus/qmaur"
authors = ["QuietMisdreavus <victoria@quietmisdreavus.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raur = "2"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = "0.2"
clap = "2"
chrono = "0.4"
